# ors_cpp_archive

./: CMakeLists.txt
com/ors/: main.cpp
com/ors/basics/: cp_headers.cpp  digits.cpp  map.cpp  pairs.cpp  set.cpp  sorting_algorithms.cpp  stack.cpp  string.cpp  string_handling.cpp  testcase.cpp  testcase_handling.cpp  time_complexity.cpp  traversal_searching.cpp  tutorial_templatecpp  variables.cpp  vector.cpp  vector_handling.cpp
com/ors/basics/bitmasking_bitmanipulation/: bitmasking_basics.cpp
com/ors/basics/string/: string.cpp  substring_1.cpp
com/ors/problems/: copy_me.cpp
com/ors/problems/toph/: solving_from_toph.txt  toph_caesar_cipher.cpp  toph_closest_pair.cpp  toph_fundygram.cpp  toph_mines.cpp
com/ors/problems/toph/easy/: fibonacci_in_between.cpp  heist_double_trouble.cpp  help_them.cpp  nth_prime.cpp  prime_plus_prime.cpp  print_the_words.cpp  test_cases.cpp  toph_follow_the_beats.cpp  toph_goat_research.cpp  toph_incompatible_crops.cpp  toph_neat_brackets.cpp
com/ors/problems/toph/hard/: free_pizza.cpp
com/ors/problems/toph/moderate/: circle_of_boltu.cpp  oh_no_classes.cpp  plant_trees_save_life.cpp
com/ors/problems/toph/troll_questions/: hot_wheels_cold_tires.cpp  if_else_eat.cpp  kathal_game.cpp  one_step_to_the_acm_lab.cpp  shukrans_dilemma.cpp  the_power_of_choice.cpp
com/ors/problems/toph/troll_questions_very_hard/: help_them.cpp  the_perfect_score.cpp  the_power_of_choice.cpp
com/ors/problems/toph/unnamed_and_lost/: 2i_double-o_2loop_case.cpp
com/ors/problems/toph/unranked/: i_did_not_do_the_assignment.cpp  sofdor_alis_magical_blackboard.cpp
com/ors/problems/toph/very_easy/: 45th_icpc_unsolved_problem.cpp  a_feast_for_the_fans.cpp  alayna_and_strings.cpp  ant_query.cpp  be_like_hasib.cpp  burrows_and_scofield.cpp  chief_thief.cpp  collectors_problem.cpp  event_timing.cpp  find_prime.cpp  genius_needs_help.cpp  gpa_calculator.cpp  ice_cream_of_montu_mia.cpp  icpc_seat_plan.cpp  identify_the_level.cpp  jigsaw_puzzle.cpp  love_letters.cpp  make_it_big.cpp  matching_brackets.cpp  niko_loves_nsu.cpp  nomans_birthday.cpp  nusrats_treat.cpp  once_upon_a_time_in_dhaka.cpp  power_of_army.cpp  print_your_victory.cpp  prochur_chuti_lagbe.cpp  shimantos_paralellogram.cpp  strong_passwords.cpp  sum_equals_lcm.cpp  the_boat_filled_with_love.cpp  the_depressed_guy.cpp  the_haunted_house.cpp  the_titan.cpp  tree_knapsack_problem.cpp  version_checker.cpp  who_is_the_champion.cpp  why_dont_you_guys_believe_him.cpp
com/ors/problems/ulab_contest/april_2026_cp_contest/: creating_words.cpp  good_array.cpp  helpful_maths.cpp  maximum_multiple_sum.cpp  way_too_long_words.cpp
com/ors/problems/unsolved_problematic_questions/: array_sorting.cpp  chief_thief.cpp  dilus_library.cpp  find_nsups.cpp  game_of_tic_tac_toe.cpp  make_it_big.cpp  prochur_chuti_lagbe.cpp  toph_find_the_combination.cpp  tree_knapsack_problem.cpp
resources/: ulab_contest_problems.txt
